--- a/templates/stamp_rally.html
+++ b/templates/stamp_rally.html
@@ -4,45 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>スタンプラリーの台紙</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            text-align: center;
-            padding: 20px;
-        }
-        .stamp-card {
-            border: 3px solid #3498db; /* 外枠の色 */
-            padding: 20px;
-            margin: 20px auto;
-            max-width: 350px;
-        }
-        .row {
-            text-align: center;
-            margin: 10px 0;
-        }
-        .stamp {
-            width: 100px;
-            height: 100px;
-            border: 1px dashed #000;
-            display: inline-block;
-            margin: 5px;
-            border-radius: 50%; /* 丸型にするためのスタイル */
-            line-height: 100px; /* テキストを垂直方向の中央に配置 */
-            vertical-align: middle; /* テキストを水平方向の中央に配置 */
-        }
-        .row:nth-child(2) .stamp:nth-child(1) { background-color: rgba(255, 99, 132, 0.3); }
-        .row:nth-child(2) .stamp:nth-child(2) { background-color: rgba(54, 162, 235, 0.3); }
-        .row:nth-child(2) .stamp:nth-child(3) { background-color: rgba(255, 206, 86, 0.3); }
-        .row:nth-child(3) .stamp:nth-child(1) { background-color: rgba(75, 192, 192, 0.3); }
-        .row:nth-child(3) .stamp:nth-child(2) { background-color: rgba(153, 102, 255, 0.3); }
-        .row:nth-child(3) .stamp:nth-child(3) { background-color: rgba(255, 159, 64, 0.3); }
-        .row:nth-child(4) .stamp:nth-child(1) { background-color: rgba(255, 129, 102, 0.3); }
-        .row:nth-child(4) .stamp:nth-child(2) { background-color: rgba(99, 132, 255, 0.3); }
-        .row:nth-child(4) .stamp:nth-child(3) { background-color: rgba(132, 255, 144, 0.3); }
-    </style>
 </head>
 <body>
-    <link rel="stylesheet" href="templates/stamp_rally.css">
+    {% include 'home.html' %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/stamp_rally.css') }}">
     <h1>スタンプラリー</h1>
     <form method="post" action="{{ url_for('kenrokuen') }}">
         <div class="stamp-card">
