--- a/templates/stamp_rally.html
+++ b/templates/stamp_rally.html
@@ -9,23 +9,22 @@
     {% include 'home.html' %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/stamp_rally.css') }}">
     <h1>スタンプラリー</h1>
-    <form method="post" action="{{ url_for('kenrokuen') }}">
         <div class="stamp-card">
             <h2>スタンプカード</h2>
             <div class="row">
-                <button type="submit" name="stamp" value="兼六園" class="stamp">兼六園</button>
-                <button type="submit" name="stamp" value="金沢城" class="stamp">金沢城</button>
-                <button type="submit" name="stamp" value="21世紀美術館" class="stamp">21世紀美術館</button>
+                <a href="{{ url_for('kenrokuen') }}" class="stamp">兼六園</a>
+                <a href="{{ url_for('kenrokuen') }}" class="stamp">兼六園</a>
+                <a href="{{ url_for('kenrokuen') }}" class="stamp">兼六園</a>
             </div>
             <div class="row">
-                <button type="submit" name="stamp" value="4" class="stamp">4</button>
-                <button type="submit" name="stamp" value="5" class="stamp">5</button>
-                <button type="submit" name="stamp" value="6" class="stamp">6</button>
+                <a href="{{ url_for('kenrokuen') }}" class="stamp">兼六園</a>
+                <a href="{{ url_for('kenrokuen') }}" class="stamp">兼六園</a>
+                <a href="{{ url_for('kenrokuen') }}" class="stamp">兼六園</a>
             </div>
             <div class="row">
-                <button type="submit" name="stamp" value="7" class="stamp">7</button>
-                <button type="submit" name="stamp" value="8" class="stamp">8</button>
-                <button type="submit" name="stamp" value="9" class="stamp">9</button>
+                <a href="{{ url_for('kenrokuen') }}" class="stamp">兼六園</a>
+                <a href="{{ url_for('kenrokuen') }}" class="stamp">兼六園</a>
+                <a href="{{ url_for('kenrokuen') }}" class="stamp">兼六園</a>
             </div>
         </div>
     </form>
