--- a/templates/stamp_rally.html
+++ b/templates/stamp_rally.html
@@ -12,13 +12,7 @@
         <div class="stamp-card">
             <h2>スタンプカード</h2>
             <div class="row">
-                {% for stamp in stamps %}
-                <div class="row">
-                    <a href="{{ url_for('kenrokuen') }}" class="stamp {{ 'stamped' if stamp.stamped }}">
-                        {{ stamp.name }}
-                    </a>
-                </div>
-            {% endfor %}
+                <a href="{{ url_for('kenrokuen') }}" class="stamp">兼六園</a>
                 <a href="{{ url_for('kenrokuen') }}" class="stamp">兼六園</a>
                 <a href="{{ url_for('kenrokuen') }}" class="stamp">兼六園</a>
             </div>
