--- a/static/css/stamp_rally.css
+++ b/static/css/stamp_rally.css
@@ -24,6 +24,10 @@ body {
     vertical-align: middle; /* テキストを水平方向の中央に配置 */
     text-decoration: none; /* リンクのアンダーラインを除去 */
 }
+.stamp.collected {
+    background-color: #3498db; /* ここでの色は実際には青です */
+}
+
 .row:nth-child(2) .stamp:nth-child(1) { background-color: rgba(255, 99, 132, 0.3); }
 .row:nth-child(2) .stamp:nth-child(2) { background-color: rgba(54, 162, 235, 0.3); }
 .row:nth-child(2) .stamp:nth-child(3) { background-color: rgba(255, 206, 86, 0.3); }
