--- a/templates/stamp_rally.html
+++ b/templates/stamp_rally.html
@@ -12,20 +12,21 @@
     <div class="stamp-card">
         <h2>スタンプカード</h2>
         <div class="row">
-            <a href="{{ url_for('kenrokuen') }}" id="stamp-kenrokuen" class="stamp">兼六園</a>
-            <a href="{{ url_for('kenrokuen') }}" id="stamp-kenrokuen-2" class="stamp">兼六園</a>
-            <a href="{{ url_for('kenrokuen') }}" id="stamp-kenrokuen-3" class="stamp">兼六園</a>
+            <a href="{{ url_for('kenrokuen', stamp_name='stamp1') }}" id="stamp1" class="stamp {{ 'collected' if stamps_status.get('stamp1', False) else '' }}">兼六園</a>
+            <a href="{{ url_for('kenrokuen', stamp_name='stamp2') }}" id="stamp2" class="stamp {{ 'collected' if stamp1_collected else '' }}">Stamp 2</a>
+            <a href="{{ url_for('kenrokuen', stamp_name='stamp3') }}" id="stamp3" class="stamp {{ 'collected' if stamp1_collected else '' }}">Stamp 3</a>
         </div>
         <div class="row">
-            <a href="{{ url_for('kenrokuen') }}" id="stamp-kenrokuen-4" class="stamp">兼六園</a>
-            <a href="{{ url_for('kenrokuen') }}" id="stamp-kenrokuen-5" class="stamp">兼六園</a>
-            <a href="{{ url_for('kenrokuen') }}" id="stamp-kenrokuen-6" class="stamp">兼六園</a>
+            <a href="{{ url_for('kenrokuen', stamp_name='stamp4') }}" id="stamp4" class="stamp {{ 'collected' if stamp1_collected else '' }}">Stamp 4</a>
+            <a href="{{ url_for('kenrokuen', stamp_name='stamp5') }}" id="stamp5" class="stamp {{ 'collected' if stamp1_collected else '' }}">Stamp 5</a>
+            <a href="{{ url_for('kenrokuen', stamp_name='stamp6') }}" id="stamp6" class="stamp {{ 'collected' if stamp1_collected else '' }}">Stamp 6</a>
         </div>
         <div class="row">
-            <a href="{{ url_for('kenrokuen') }}" id="stamp-kenrokuen-7" class="stamp">兼六園</a>
-            <a href="{{ url_for('kenrokuen') }}" id="stamp-kenrokuen-8" class="stamp">兼六園</a>
-            <a href="{{ url_for('kenrokuen') }}" id="stamp-kenrokuen-9" class="stamp">兼六園</a>
+            <a href="{{ url_for('kenrokuen', stamp_name='stamp7') }}" id="stamp7" class="stamp {{ 'collected' if stamp1_collected else '' }}">Stamp 7</a>
+            <a href="{{ url_for('kenrokuen', stamp_name='stamp8') }}" id="stamp8" class="stamp {{ 'collected' if stamp1_collected else '' }}">Stamp 8</a>
+            <a href="{{ url_for('kenrokuen', stamp_name='stamp9') }}" id="stamp9" class="stamp {{ 'collected' if stamp1_collected else '' }}">Stamp 9</a>
         </div>
+        
     </div>
 </body>
 </html>
