--- a/templates/night/stamp3.html
+++ b/templates/night/stamp3.html
@@ -2,7 +2,7 @@
 <html lang="ja" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>兼六園</title>
+        <title>湯桶温泉</title>
         <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
     </head>
     <body>
@@ -10,10 +10,10 @@
             <div>
                 <a href="../">ホーム</a>
                 <a href="../stamp">スタンプ</a>
-                <a href="../sample">kenrokuen</a>
+                <a href="../sample">yuokeonsen</a>
             </div>
         </header>
-        <h1>兼六園</h1>
+        <h1>湯桶温泉</h1>
         <p>-------------</p>
         <button onclick="startCamera()">カメラ起動・QRコード読み取り開始</button>
         <button id="stop-camera-btn">カメラ停止</button>
