add noon & night

--- a/templates/stamp_rally_morning.html
+++ b/templates/stamp_rally_morning.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     {% include 'home.html' %}
+    <div>
+        <a href="/stamp_rally_noon">noon</a>
+        <a href="/stamp_rally_night">night</a>
+    </div>
     <h1>スタンプラリー</h1>
     <div class="stamp-card">
         <h2>スタンプカード</h2>
