--- a/templates/noon/stamp4.html
+++ b/templates/noon/stamp4.html
@@ -2,7 +2,7 @@
 <html lang="ja" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>兼六園</title>
+        <title>金沢市立安江金箔工芸館</title>
         <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
     </head>
     <body>
@@ -10,10 +10,13 @@
             <div>
                 <a href="../">ホーム</a>
                 <a href="../stamp">スタンプ</a>
-                <a href="../sample">kenrokuen</a>
+                <a href="../sample">kanazawashiritsuyasuekinpakukougeikan</a>
             </div>
         </header>
-        <h1>兼六園</h1>
+        <h1>金沢市立安江金箔工芸館</h1>
+        <p>
+            金沢市立安江金箔工芸館は全国唯一の金箔博物館です。昭和49年に安江孝明氏が建設し、平成22年に東山に移転しました。金箔の歴史や厚さ1/10000mmの驚異、美術工芸品を展示しており、金箔の魅力や金沢職人の情熱を感じられる観光スポットとなっています。
+        </p>
         <p>-------------</p>
         <button onclick="startCamera()">カメラ起動・QRコード読み取り開始</button>
         <button id="stop-camera-btn">カメラ停止</button>
@@ -132,8 +135,9 @@
         
         <p>-------------</p>
         <p>地図</p>
-        <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3204.6675647453562!2d136.66007657529306!3d36.56212777231593!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff83383f9b25905%3A0x970a7b3df003f2e4!2z5YW85YWt5ZyS!5e0!3m2!1sja!2sjp!4v1700196815906!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
-
+        <p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m19!1m8!1m3!1d3618.121783892071!2d136.6654108017986!3d36.57367487041305!3m2!1i1024!2i768!4f13.1!4m8!3e3!4m0!4m5!1s0x5ff8337335bf6b9b%3A0x30eea5034ceeaa25!2z55-z5bed55yM6YeR5rKi5biC5p2x5bGx77yR5LiB55uu77yT4oiS77yR77yQIOmHkeayouW4gueri-Wuieaxn-mHkeeulOW3peiKuOmkqA!3m2!1d36.573691!2d136.665816!5e0!3m2!1sja!2sjp!4v1702621690827!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </p>
         <p>コメント投稿</p>
         <div>
             <form action="/comment" method="post">
@@ -152,11 +156,11 @@
         </div>
         <p>コメント一覧</p>
         {% for comment in comments %}
-            <li>
+            <ul>
                 <p>名前：{{ comment.author.name }}</p>
                 <p>コメント：{{ comment.comment }}</p>
                 <p>投稿日：{{ comment.comment_date.strftime('%Y-%m-%d %H:%M') }}</p>
-            </li>
+            </ul>
         {% endfor %}
         
     </body> 
