--- a/templates/morning/stamp2.html
+++ b/templates/morning/stamp2.html
@@ -1,19 +1,19 @@
+
 <!DOCTYPE html>
 <html lang="ja" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>兼六園</title>
+        <title>大乗寺丘陵公園</title>
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/morning2.css') }}">
         <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
     </head>
     <body>
         <header>
             <div>
-                <a href="../">ホーム</a>
-                <a href="../stamp">スタンプ</a>
-                <a href="../sample">kenrokuen</a>
+                <a class="back_bottan" href="../stamp">戻る</a>
             </div>
         </header>
-        <h1>兼六園</h1>
+        <h1 class="name">大乗寺丘陵公園</h1>
         <p>-------------</p>
         <button onclick="startCamera()">カメラ起動・QRコード読み取り開始</button>
         <button id="stop-camera-btn">カメラ停止</button>
@@ -125,11 +125,9 @@
     
             document.addEventListener('DOMContentLoaded', fetchStampsAndUpdateUI);
             document.getElementById('stop-camera-btn').addEventListener('click', stopCamera);
-        </script> 
-        
-        
-        
-        
+        </script>
+
+
         <p>-------------</p>
         <p>地図</p>
         <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3204.6675647453562!2d136.66007657529306!3d36.56212777231593!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff83383f9b25905%3A0x970a7b3df003f2e4!2z5YW85YWt5ZyS!5e0!3m2!1sja!2sjp!4v1700196815906!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
@@ -158,5 +156,23 @@
                 <p>投稿日：{{ comment.comment_date.strftime('%Y-%m-%d %H:%M') }}</p>
             </li>
         {% endfor %}
-        
-    </body> 
+        <div class="section-5">
+            <div class="sutanpu"></div>
+            <div class="qr-yomitori-box"></div>
+            <div class="qr">QRコード読み取り</div>
+            <div class="map-box"></div>
+            <div class="div">地図</div>
+            <div class="setumeimidasi-box"></div>
+            <div class="div2">説明見出し</div>
+            <div class="setumei-box"></div>
+            <div class="div3">説明</div>
+            <div class="komenntomidasi-box"></div>
+            <div class="div4">コメント</div>
+            <div class="komento-box"></div>
+            <div class="kankoutimei-box"></div>
+            <div class="modoru-box"></div>
+                <div class="div5">戻る</div>
+            <div class="rectangle-9"></div>
+            <div class="div6">観光地名</div>
+          </div>
+    </body>
