--- a/templates/noon/stamp1.html
+++ b/templates/noon/stamp1.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>兼六園</title>
         <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
+        <link rel="stylesheet" href="static\css\noon1.css">
     </head>
     <body>
         <header>
@@ -14,7 +15,7 @@
             </div>
         </header>
         <h1>兼六園</h1>
-        <p>-------------</p>
+        <p class="">-------------</p>
         <button onclick="startCamera()">カメラ起動・QRコード読み取り開始</button>
         <button id="stop-camera-btn">カメラ停止</button>
         <video id="video" style="display:none;"></video>
