--- a/templates/morning/stamp6.html
+++ b/templates/morning/stamp6.html
@@ -4,18 +4,19 @@
         <meta charset="utf-8">
         <title>兼六園</title>
         <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/noon1.css') }}">
     </head>
     <body>
-        <header>
+        <header class="kankoutimei-box">
             <div>
                 <a href="../">ホーム</a>
                 <a href="../stamp">スタンプ</a>
                 <a href="../sample">kenrokuen</a>
             </div>
         </header>
-        <h1>兼六園</h1>
-        <p>-------------</p>
-        <button onclick="startCamera()">カメラ起動・QRコード読み取り開始</button>
+        <h1 class="rectangle-9">兼六園</h1>
+        
+        <button onclick="startCamera()" class="qr-yomitori-box">カメラ起動・QRコード読み取り開始</button>
         <button id="stop-camera-btn">カメラ停止</button>
         <video id="video" style="display:none;"></video>
         <canvas id="canvas" style="display:none;"></canvas>
@@ -130,11 +131,11 @@
         
         
         
-        <p>-------------</p>
-        <p>地図</p>
-        <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3204.6675647453562!2d136.66007657529306!3d36.56212777231593!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff83383f9b25905%3A0x970a7b3df003f2e4!2z5YW85YWt5ZyS!5e0!3m2!1sja!2sjp!4v1700196815906!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
+        
+        
+        <p class="map-box"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3204.6675647453562!2d136.66007657529306!3d36.56212777231593!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff83383f9b25905%3A0x970a7b3df003f2e4!2z5YW85YWt5ZyS!5e0!3m2!1sja!2sjp!4v1700196815906!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
 
-        <p>コメント投稿</p>
+        <p class="komenntomidasi-box">コメント投稿</p>
         <div>
             <form action="/comment" method="post">
                 <div>
