--- a/templates/noon/stamp6.html
+++ b/templates/noon/stamp6.html
@@ -9,8 +9,7 @@
         <header>
             <div>
                 <a href="../">ホーム</a>
-                <a href="../stamp">スタンプ</a>
-                <a href="../sample">kenrokuen</a>
+                <a href="../stamp_rally_noon">スタンプ</a>
             </div>
         </header>
         <h1>兼六園</h1>
