--- a/templates/night/stamp7.html
+++ b/templates/night/stamp7.html
@@ -148,7 +148,7 @@
                     <li class="comment">
                         <div class="comment-header">
                             <p>{{ comment.author.name }}</p>
-                            <p>{{ comment.comment_date.strftime('%Y-%m-%d %H:%M') }}</p>
+                            <p>{{ comment.comment_date.strftime('%Y年%m月%d日 %H:%M') }}</p>
                         </div>
                         <div class="comment-body">
                             <p>{{ comment.comment }}</p>
