--- a/templates/noon/stamp4.html
+++ b/templates/noon/stamp4.html
@@ -57,7 +57,7 @@
         
                         if (code) {
                             console.log('QRコード検出:', code.data);
-                            if (code.data === 'kenrokuen') {
+                            if (code.data === 'KinpakuKogei') {
                                 updateStampStatus('stamp4', 'noon'); // 時間帯を'noon'に指定
                             } else {
                                 alert('スキャンされたQRコードが一致しません。');
