main.htmlに最初の画面を設定した

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,3 +26,8 @@ body, html {
 .header a:hover {
     background-color: rgba(255, 255, 255, 0.2);
 }
+
+.flex_column {
+    display: flex;
+    display: -webkit-flex;
+}
